<resources>
    <string name="app_name">Eats Ease</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_saved">Saved</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_eatsease">EatsEase</string>
    //LOGIN
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    //SIGN UP
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="confirm_password">Confirm password</string>
    <string name="accept_terms_amp_conditions"><![CDATA[accept terms & conditions]]></string>
    <string name="sign_up">Sign up</string>
    <string name="today_s_recomendation">Today\'s Recomendation</string>
    <string name="asian_card_view_title">ASIAN</string>
    <string name="vegan_card_view_title">VEGAN</string>
    <string name="gluten_free_title">gluten-free</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="security">Security</string>
    <string name="app_settings">App Settings</string>
    <string name="help_center">Help Center</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="change_password">Change Password</string>
    //MAIN
</resources>