<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rockettsttudio.eatsease.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.rockettsttudio.eatsease.ui.saved.SavedFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.rockettsttudio.eatsease.ui.recipes.RecipesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_navigation_recipes_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.rockettsttudio.eatsease.ui.recipes.RecipeDetailsFragment"
        android:label="fragment_recipe_details"
        tools:layout="@layout/fragment_recipe_details" />
</navigation>