<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namesignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Eats_Ease_sign_up"
        app:placeholderText="Username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namesignup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/birthdate"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdate_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/confirm_password"
        app:boxCornerRadiusBottomEnd="15sp"
        app:boxCornerRadiusBottomStart="15sp"
        app:boxCornerRadiusTopEnd="15sp"
        app:boxCornerRadiusTopStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordsignup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchbuttonsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart= "70dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        app:thumbTint="@color/verdeapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpass" />

    <TextView
        android:id="@+id/terms_conditions_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/accept_terms_amp_conditions"
        app:layout_constraintStart_toEndOf="@+id/switchbuttonsignup"
        app:layout_constraintTop_toBottomOf="@+id/confirmpass" />

    <Button
        android:id="@+id/sing_up_button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/verdeapp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpass" />

    <ImageView
        android:id="@+id/Eats_Ease_sign_up"
        android:layout_width="141dp"
        android:layout_height="23dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headline" />
</androidx.constraintlayout.widget.ConstraintLayout>